swapped out white space for break word in broken img alt tags: prevent alt tag from being cut off

--- a/src/apps/media-2/src/app/components/MediaShared.less
+++ b/src/apps/media-2/src/app/components/MediaShared.less
@@ -43,7 +43,7 @@
   img {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    word-break: break-word;
   }
 }
 
